Fixed assert failure when trying to load invalid SVG file.

Task-number: QTBUG-10022
Reviewed-by: Trond
(cherry picked from commit 13732b74e07fe10e95f2601f6cf2d0be78467eaa)